# all_i_wanted_was_a_pepsi

./: .gitignore  Makefile  pyproject.toml
src/image_processing/: __init__.py  basic.py
tests/: test_basic.py
